[tool.poetry]
name = "telegram-to-rss"
version = "0.1.0"
description = ""
authors = ["aigoncharov"]
license = "MIT"
readme = "README.md"
packages = [{include = "telegram_to_rss"}]

[tool.poetry.dependencies]
python = "^3.12"
Telethon = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
